--- a/models/lstm_features.ipynb
+++ b/models/lstm_features.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_data = pd.read_csv('../data/stock_data.csv')\n"
+    "stock_data = pd.read_csv('../data/stock_data.csv')"
    ]
   },
   {
